# prompt-automation-api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  nginx.conf  pyproject.toml
prompto/: asgi.py  manage.py  urls.py  wsgi.py
prompto/prompto/: asgi.py  settings.py  wsgi.py
prompto/settings/: __init__.py  base.py  env.py  prd.py
prompto/templates/: apps.py  models.py  serializers.py  urls.py  views.py  vo.py
prompto/templates/migrations/: 0001_initial.py
